--- a/Diseño/Grid/Galeria/style.css
+++ b/Diseño/Grid/Galeria/style.css
@@ -41,3 +41,41 @@ footer{
     padding: 3%;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.hero{
+    background: url('hola.jpg') center;
+    padding: 4rem 2rem;
+    background-size: cover;
+    /* grid styles */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    align-items: center;
+}
+span{
+    text-align: right;
+    color: wheat;
+    font-size: 50px;
+}
