--- a/Diseño/MediaQuery/style.css
+++ b/Diseño/MediaQuery/style.css
@@ -19,39 +19,31 @@ img{
     height: 250px;
 }
 
+span{
+    font-size: 40px;
+    color: aliceblue;
+    text-align: right;
+}
+.hero{
+    background: url('hola.jpg') center;
+    background-size: cover;
+    padding: 4rem 2rem;
+    /* grid styles */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    align-items: center;
+}
 
 #contenedor{
     display: grid;
     margin-top: 1%;
     margin-bottom: 1%;
-    grid-template-areas: "NAV C1 C2 C3" "NAV C4 C5 C6";
+    grid-template-areas: "NAV . ." "NAV . ." "NAv . .";
     justify-content: space-between;
     grid-gap: 1%;
 
 }
 
-div.contenedor div:nth-child(1){
-    grid-area: C1;
-}
-
-div.contenedor div:nth-child(2){
-    grid-area: C2;
-}
-
-div.contenedor div:nth-child(3){
-    grid-area: C3;
-}
-
-div.contenedor div:nth-child(4){
-    grid-area: C4;
-}
-
-div.contenedor div:nth-child(5){
-    grid-area: C5;
-}
-div.contenedor div:nth-child(6){
-    grid-area: C6;
-}
 
 ul {
     list-style-type: none;
@@ -105,7 +97,7 @@ footer{
         display: grid;
         margin-top: 3%;
         margin-bottom: 3%;
-        grid-template-areas: "NAV NAV" "C1 C2" "C3 C4" "C5 C6";
+        grid-template-areas: "NAV NAV" ". ." ". ." ". .";
         justify-content: space-around;
         grid-gap: 1%;
     }
@@ -152,7 +144,7 @@ footer{
         display: grid;
         margin-top: 3%;
         margin-bottom: 3%;
-        grid-template-areas: "NAV" "C1" "C2" "C3" "C4" "C5" "C6";
+        grid-template-areas: "NAV" "." "." "." "." "." ".";
         justify-content: space-around;
         grid-gap: 1%;
     }
@@ -166,12 +158,13 @@ footer{
         overflow: auto;
         font-size: 5px;
         text-align: center;
-      
+
     }
 
     img{
         width: 275px;
         height: 275px;
+        
     }
 
     footer{
@@ -185,6 +178,7 @@ footer{
     div div { 
         border: 5px solid #AD49C4;
         margin-bottom: 2%;
+        margin-top: 10%;
     }
 
 }
