--- a/Diseño/ResponsiveTotal/style.css
+++ b/Diseño/ResponsiveTotal/style.css
@@ -1,85 +1,149 @@
+/* Style the body */
+body {
+    font-family: Arial;
+    margin: 0;
+}
+
+header {
+    background: #B900B4;
+    color: white;
+    font-size: 100px;
+    flex-direction: row;
+    text-align: center;
+}
+
+img{
+    width: 300px;
+    height: 270px; 
+    background-size: cover;
+
+}
+
+.hero {
+    background: url('game.png') center;
+    padding: 4rem 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    align-items: center;
+    color: transparent;
+    font-size: 500%;
+}
+
+
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-    border: 1px solid #555;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
 }
 
 li a {
     display: block;
-    color: #000;
-    padding: 8px 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-li {
-    text-align: center;
-    border-bottom: 1px solid #555;
-}
-
-li:last-child {
-    border-bottom: none;
-}
-
-li a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-}
-
-header{
-    background-color: #ff5733;
-    height: auto;
-    color: #df0044;
-    font-size: 100px;
-    text-align: center;
-
-}
-
-body{
-    font-family: 'Amatic SC', cursive;
-    margin: 0px;
-}
-.hero{
-    background: url('hola.jpg') center;
-    background-size: cover;
-    padding: 4rem 2rem;
-    /* grid styles */
+.galeria > section{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    align-items: center;
-    color: aliceblue;
-}
-/*
-#contenedor{
-    display: grid;
-    grid-template-areas: "nav" "imagenes";
-}*/
-
-nav{
-    grid-area: nav;
+    grid-template-columns: repeat(auto-fit, minmax(310px, 0.5fr));
+    grid-gap: 0.5rem;
 }
 
-#galeria{
-    /*grid-area: galeria;*/
-    /*border: 100px solid blacK;*/
+article{
     text-align: center;
-    width:2000px;
-    background-color: red;
+    justify-content: center;
+    margin-left: 80px;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    height: 330px;
+    width: 300px;
+  
 }
 
+button{
+    width: 50%;
+}
+
+span{
+    color:chartreuse;
+    font-weight: bold;
+    margin: 10px;
+}
 
 footer{
+    background: #B900B4;
+    color: aliceblue;
     display: flex;
-    background-color: #ff5733;
-    justify-content: space-between;
+    justify-content: space-around;
     height: auto;
-    padding: 3%;
-    font-size: 50px;
+    font-size: 150%;
 }
+.contenedor{
+    background: url('fondo.png') center;
+    background-size: cover;
+}
+
+/************************************************************MEDIAQUERY*************************************/
+
+
+@media only screen and (min-width: 1050px) {
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    li {
+        float: left;
+    }
+
+    li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+
+    .contenedor{
+        display: grid;
+        grid-template-columns: 0.3fr 3fr;
+        grid-template-areas:
+            'navegador contenido';
+        grid-gap: 5%;
+        padding: 8%;
+        background: url('fondo.png') center;
+        background-size: cover;
+    }
+
+    .nav{
+        grid-area: navegador;
+    }
+
+    .contendor .galeria{
+        grid-area: contenido;
+
+    }
+
+}
+
+
+.content {padding:20px;}
+
+
