--- a/Cliente/JavaScript/Unidad10/Ejercicio6/ahorcado/css/estilo.css
+++ b/Cliente/JavaScript/Unidad10/Ejercicio6/ahorcado/css/estilo.css
@@ -32,7 +32,7 @@ body {
 		'partida abecedario'
 		'letras letras'
 		'footer footer';
-	grid-gap: 10px;
+	grid-gap: 1.5%;
 	background-color: #2196F3;
 	margin: 0;
 	padding: .5em 10%;
@@ -101,30 +101,24 @@ button:hover {
 	font-weight: bold;
 }
 
-#abecedario table {
-	width: 100%;
-}
-#abecedario td {
-	border: solid black .1em;
-	width: 18%;
-	height: 1.5em;
-}
-#abecedario td:hover {
-	background-color: red;
-	cursor: pointer;
-}
-#abecedario tr:last-child td:last-child {
-	border: none;
-	cursor: default;
-}
-#abecedario tr:last-child td:last-child:hover {
-	background-color: transparent;
-}
-
 #partida img {
 	height: 400px;
 	height: 25em;
 	width: auto;
+}
+
+.grid-abecedario {
+	height: 50%;
+	display: grid;
+	grid-template-columns: auto auto auto auto auto;
+	grid-gap: 1.5%;
+}
+.grid-letra {
+	background-color: rgba(255, 255, 255, 0.8);
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	text-align: center;
+	padding: auto;
+	cursor: pointer;
 }
 
 #laPalabra {
