--- a/Servidor/Ejercicios/Unidad6/Ejercicio5/style.css
+++ b/Servidor/Ejercicios/Unidad6/Ejercicio5/style.css
@@ -14,9 +14,15 @@ img{
     height: 350px;
 }
 .footer{
-    
+
 }
 #kfc{
     width: 75px;
     height: 50px;
+}
+.captcha{
+    margin-left: 33%;
+    margin-bottom: 2.5%;
+    width: 200px;
+    height: 100px;
 }
